# adventofcode

./: Pipfile  mypy.ini  pyproject.toml  template.py
2015/: Day_01.ipynb  Day_02.ipynb  Day_03.ipynb  Day_04.ipynb  Day_05.ipynb  Day_06.ipynb  Day_07.ipynb  Day_08.ipynb  Day_09.ipynb  Day_10.ipynb  Day_11.ipynb  Day_12.ipynb  Day_13.ipynb  Day_14.ipynb  Day_15.ipynb  Day_16.ipynb  Day_17.ipynb  Day_18.ipynb  Day_19.ipynb  Day_20.ipynb  Day_21.ipynb  Day_22.ipynb  Day_23.ipynb  Day_24.ipynb  Day_25.ipynb  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  (+10 more)
2016/: Day_01.ipynb  Day_02.ipynb  Day_03.ipynb  Day_04.ipynb  Day_05.ipynb  Day_06.ipynb  Day_07.ipynb  Day_08.ipynb  Day_09.ipynb  Day_10.ipynb  Day_11.ipynb  Day_12.ipynb  Day_13.ipynb  Day_14.ipynb  Day_15.ipynb  Day_16.ipynb  Day_17.ipynb  Day_18.ipynb  Day_19.ipynb  Day_20.ipynb  Day_21.ipynb  Day_22.ipynb  Day_23.ipynb  Day_24.ipynb  Day_25.ipynb  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  (+10 more)
2017/: Day_01.ipynb  Day_02.ipynb  Day_03.ipynb  Day_04.ipynb  Day_05.ipynb  Day_06.ipynb  Day_07.ipynb  Day_08.ipynb  Day_09.ipynb  Day_10.ipynb  Day_11.ipynb  Day_12.ipynb  Day_13.ipynb  Day_14.ipynb  Day_15.ipynb  Day_16.ipynb  Day_17.ipynb  Day_18.ipynb  Day_19.ipynb  Day_20.ipynb  Day_21.ipynb  Day_22.ipynb  Day_23.ipynb  Day_24.ipynb  Day_25.ipynb  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  (+18 more)
(+154 files in other folders)
